Fixed spacing between cards' img and title

--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,7 @@ section {
 
 .card-images img {
   height: 95%;
+  margin: 0;
 }
 
 .embed {
@@ -177,6 +178,9 @@ section {
   color: #272044;
   font-size: 24px;
   font-weight: 900;
+  margin: 0;
+  padding: 10px 0;
+  text-align: center;
 }
 
 .card-description-text {
